assets/ding.scss
---
---

// 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
@import "functions";

// 2. Include any default variable overrides here

$font-family-sans-serif:
'Lora',
// Safari for OS X and iOS (San Francisco)
//-apple-system,
// Chrome < 56 for OS X (San Francisco)
//BlinkMacSystemFont,
// Windows
//"Segoe UI",
// Android
//"Roboto",
// Basic web fallback
"Hoefler Text", "Palatino", "Times New Roman", Times, serif,
//"Verdana", "Arial", sans-serif,
// Emoji fonts
"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;

$body-color: #333;
$body-color-dark: #e3ebf3;
$black: #333;
$white: #fff;
$dingred: #cc000c;
$dingdarkred: tint-color($dingred, 43%);
$primary: $dingred;

$primary-text-emphasis-dark: $dingdarkred;
$primary-bg-subtle-dark: $dingdarkred;
$primary-border-subtle-dark: $dingdarkred;
$link-color-dark: $dingdarkred;

$navbar-light-color: $body-color;
$navbar-light-hover-color: shift-color($body-color, 100%);
$navbar-light-active-color: $dingred;
$navbar-light-toggler-border-color: rgba($black, .4);
$navbar-light-brand-color: $body-color;
$navbar-light-brand-hover-color: shift-color($body-color, 100%);

$font-weight-light: 400;
$font-weight-normal: 500;
$font-weight-bold: 600; 
$headings-font-weight: 600;

$font-size-base: 0.97rem;  // Assumes the browser default, typically 1rem = 16px; we change the browser default later

$lead-font-size: (
  $font-size-base * 1.1
);

$h1-font-size: (
  $font-size-base * 1.15
);

$h2-font-size: (
  $font-size-base * 0.9
);

$h3-font-size: (
  $font-size-base * 1
);

$h4-font-size: (
  $font-size-base * 0.93
);

$h5-font-size: (
  $font-size-base * 0.9
);

$h6-font-size: (
  $font-size-base * 0.85
);

$headings-margin-bottom: 0.875rem;
$headings-line-height: 1.5;

$grid-breakpoints: (
  xs: 0,
  sm: 576px,
  md: 768px,
  lg: 992px,
  xl: 1200px,
  xxl: 1800px
);

$spacer: 1rem;
$spacers: (
  0: 0,
  1: $spacer * .25,
  2: $spacer * .5,
  3: $spacer * .75,
  4: $spacer,
  5: $spacer * 1.25,
);
$grid-gutter-width: 1.5rem;
$gutters: (
  0: 0,
  1: $spacer * .25,
  2: $spacer * .5,
  3: $spacer,
  4: $spacer * 1.5,
  5: $spacer * 3,
  6: $spacer * 3.5,
  7: $spacer * 3.75,
  8: $spacer * 4,
  9: $spacer * 4.5,
  10: $spacer * 5,
);

// 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
@import "variables";
@import "variables-dark";

// 4. Include any default map overrides here

// 5. Include remainder of required parts
@import "maps";
@import "mixins";
@import "root";

// 6. Optionally include any other parts as needed
@import "utilities";
@import "reboot";
@import "type";
@import "images";
@import "containers";
@import "grid";
@import "tables";
@import "forms";
@import "buttons";
@import "transitions";
@import "dropdown";
@import "button-group";
@import "nav";
@import "navbar";
@import "card";
@import "accordion";
@import "breadcrumb";
@import "pagination";
@import "badge";
@import "alert";
@import "progress";
@import "list-group";
@import "close";
@import "toasts";
@import "modal";
@import "tooltip";
@import "popover";
@import "carousel";
@import "spinners";
@import "offcanvas";
@import "placeholders";

// Helpers
@import "helpers";

// 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
@import "utilities/api";

// 8. Add additional custom code here

[data-bs-theme="dark"] {

  .navbar {
    --bs-navbar-color: $body-color-dark;
    --bs-navbar-hover-color: #{shift-color($body-color-dark, -100%)};
    --bs-navbar-active-color: #{$dingdarkred};
    --bs-navbar-brand-color: $body-color-dark;
    --bs-navbar-brand-hover-color: #{shift-color($body-color-dark, -100%)};
  }

  .nav-link.active, .nav-link.show {
    color: #{$dingdarkred};
  }

  .btn-primary {
    --bs-btn-color: #{$body-color-dark};
    --bs-btn-bg: #{$dingdarkred};
    --bs-btn-border-color: #{$dingdarkred};
    --bs-btn-hover-bg: var(--bs-link-hover-color);
    --bs-btn-hover-border-color: var(--bs-link-hover-color);
    --bs-btn-focus-shadow-rgb: 217, 110, 116;
    --bs-btn-active-bg: #{$dingdarkred};
    --bs-btn-active-border-color: #{$dingdarkred};
    --bs-btn-active-shadow: inset 0 3px 5px rgba(227, 235, 243, 0.875);
    --bs-btn-disabled-color: #{$body-color-dark};
    --bs-btn-disabled-bg: #{$dingdarkred};
    --bs-btn-disabled-border-color: #{$dingdarkred};
  }

  .btn-outline-primary {
    --bs-btn-color: #{$dingdarkred};
    --bs-btn-border-color: #{$dingdarkred};
    --bs-btn-hover-bg: #{$dingdarkred};
    --bs-btn-hover-border-color: #{$dingdarkred};
    --bs-btn-focus-shadow-rgb: 217, 110, 116;
    --bs-btn-active-bg: #{$dingdarkred};
    --bs-btn-active-border-color: #{$dingdarkred};
    --bs-btn-active-shadow: inset 0 3px 5px rgba(227, 235, 243, 0.875);
    --bs-btn-disabled-color: #{$dingdarkred};
    --bs-btn-disabled-border-color: #{$dingdarkred};
  }

  .btn-outline-secondary {
    --bs-btn-color: #{$body-color-dark};
    --bs-btn-border-color: #{$body-color-dark};
    --bs-btn-hover-bg: shift-color($body-color-dark, 100%);
    --bs-btn-hover-border-color: shift-color($body-color-dark, 100%);
  }

  * {
    --bs-primary-rgb: var(--bs-link-color-rgb);
  }
}

nav[data-toggle="toc"] .nav .active .nav {
  display: none;
}

.nav-link:focus-visible {
    box-shadow: none;
}

span.text-bg-primary:hover {
    background-color: var(--bs-link-hover-color) !important;
  }

.card-body p {
  margin-bottom: 0rem;
  line-height: 1.65;
}

.card-body {
  margin-bottom: 1rem;
}

h1, .h1 {
  margin-top: 0.875rem;
}

h2, .h2 {
  font-weight: 600;
  text-transform: uppercase;
}

h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2 {
  margin-top: 0.625rem;
}

li {
  margin-bottom: 1pt;
  line-height: 1.6;
}

li.list-group-item {
  margin-bottom: 0pt;
  line-height: 0.95;
  font-size: 0.93rem;
}

em em {
  font-style: normal;
}

.headerphoto {
  width: 500px;
}

.maincontent {
  max-width: 800px;
}

.small-screen-not-sticky {
  position: static;
  margin-bottom: 2.25rem;
}

@include media-breakpoint-up(md) {
  .maincontent {
    max-width: 975px;
  }
}

@include media-breakpoint-up(lg) {
  .small-screen-not-sticky {
    position: sticky;
  }
}

